# acled2pgsql

./: .gitignore  Cargo.toml  config.toml  diesel.toml
migrations/2023-05-22-111445_create_incidents/: up.sql
src/: config.rs  main.rs  schema.rs
src/acled/: incident.rs  mod.rs
